# custos

./: .gitignore  CMakeLists.txt  README.md
docs/: osc-contract.md
docs/handoff/: 2026-07-22-km-classid-brief.md
docs/superpowers/handoffs/: 2026-07-11-km-presetroot-persistence-bug.md  2026-07-11-km-unified-data-root.md  2026-07-14-gp-routing-map-derivation.md  2026-07-19-km-oversized-load-and-favorder.md  2026-07-19-km-window-contract-and-arturia-workflow.md  2026-07-21-km-dock-ontop-sender.md
docs/superpowers/plans/: 2026-07-03-custos-m1.md  2026-07-03-custos-m2.md  2026-07-04-custos-addressing-core.md  2026-07-04-custos-favorites.md  2026-07-04-custos-m3.md  2026-07-04-custos-param-dump.md  2026-07-04-custos-volume.md  2026-07-04-custos-window-control.md  2026-07-05-custos-editor-midi-matrix.md  2026-07-05-custos-osc-contract-v2.md  2026-07-06-custos-multibus-audio.md  2026-07-07-custos-preset-store.md  2026-07-09-custos-mainlr-feedback.md  2026-07-10-custos-db-ownership.md  2026-07-11-custos-learn-param-capture.md  2026-07-11-custos-unified-data-root.md  2026-07-20-custos-dock-ontop-mode.md
docs/superpowers/specs/: 2026-07-03-custos-design.md  2026-07-03-custos-m2-gui-design.md  2026-07-04-custos-external-control-contract-design.md  2026-07-04-custos-m3-osc-load-persistence-design.md  2026-07-04-custos-window-control-design.md  2026-07-05-custos-editor-midi-matrix-design.md  2026-07-05-custos-osc-contract-v2-design.md  2026-07-06-custos-instrument-browse-design.md  2026-07-06-custos-multibus-audio-design.md  2026-07-07-custos-preset-store-design.md  2026-07-09-custos-mainlr-feedback-design.md  2026-07-10-custos-instrument-db-ownership-design.md  2026-07-11-custos-learn-param-capture-design.md  2026-07-11-custos-unified-data-root-design.md  2026-07-18-custos-preset-update-prefill-design.md  2026-07-19-osc-death-incident-findings.md  2026-07-20-custos-dock-ontop-mode-design.md
experiments/: addressing-core.md  favorites.md  gp-count-timing.md  m3-osc-load.md  param-dump.md  volume.md  window.md
scripts/: _vsenv.cmd  build.cmd  ci.cmd  configure.cmd  deploy.cmd  fetch-deps.cmd  probe.cmd  test.cmd
src/: AudioBusMapper.h  Config.h  CustosEditor.cpp  CustosEditor.h  CustosLookAndFeel.cpp  CustosLookAndFeel.h  CustosOscServer.cpp  CustosOscServer.h  CustosProcessor.cpp  CustosProcessor.h  FacadeParameter.cpp  FacadeParameter.h  FavoritesStore.cpp  FavoritesStore.h  HostTrace.cpp  HostTrace.h  InnerBinding.cpp  InnerBinding.h  InstrumentBrowser.h  MidiRoute.cpp  MidiRoute.h  MidiRouteMatrix.h  OscContract.h  PluginEntry.cpp  PresetCodec.cpp  PresetCodec.h  PresetStore.cpp  PresetStore.h  StateCodec.cpp  StateCodec.h  SynthLoader.cpp  SynthLoader.h  SynthWindow.cpp  SynthWindow.h  TitledSynthWindow.h
tests/: AddressingTest.cpp  AudioBusMapperTest.cpp  BrowseFeedbackTest.cpp  CMakeLists.txt  DockOnTopTest.cpp  EditorTest.cpp  FacadeGuardTest.cpp  FacadeParameterTest.cpp  FakeInnerProcessor.h  FavoritesStoreTest.cpp  FavoritesTest.cpp  InnerBindingTest.cpp  InstrumentBrowserTest.cpp  InstrumentLoadTest.cpp  LearnProcessorTest.cpp  MidiRouteMatrixTest.cpp  MidiRouteTest.cpp  OscCommandTest.cpp  OscContractTest.cpp  ParamDumpTest.cpp  PassthroughTest.cpp  PatchStepTest.cpp  PresetCodecTest.cpp  PresetProcessorTest.cpp  PresetStoreTest.cpp  RebindTest.cpp  StateCodecTest.cpp  SwapTest.cpp  SynthLoaderTest.cpp  SynthWindowTest.cpp  VolumeTest.cpp
tools/: kmfav.py  kmontop.py  kmplugin.py
